[package]
name = "panya"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "panya"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7.0"
chrono = "0.4.31"
thiserror = "1.0.49"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
config = "0.10"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
rss = "2.0.6"
