[package]
name = "panya"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "panya"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls"] }
# goauth_rpc_client = { git = "ssh://git@github.com/monkeydioude/GOAuTh.git" }
goauth_rpc_client = { path = "/Users/mkd/work/calq/GOAuTh/proto/rust" }
# heyo_rpc_client = { git = "ssh://git@github.com/monkeydioude/heyo.git" }
heyo_rpc_client = { path = "/Users/mkd/work/calq/heyo/proto/rust" }
mongodb = "2.7.0"
chrono = "0.4.31"
thiserror = "1.0.49"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
config = "0.10"
rocket = { version = "=0.5.0", features = ["json"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
url = "2"
rss = "2.0.6"
regex = "1"
rustls = "0.20"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[profile.dev]
opt-level = 0
[profile.release]
opt-level = 0
